src/ggrc/assets/stylesheets/_lhs.scss
/* ... */
.bar-h {
  height:6px;
  background-color:#fff;
  border-top:1px solid #aaa;
  border-bottom:1px solid #aaa;
  //background-image: image-url("bgnds/drag-h.png");
  @include background-size(30px 2px);
  background-repeat:no-repeat;
  background-position:50% 2px;
  @include opacity(0.3);
  /*
  &:hover {
    @include opacity(1);
    cursor:move;
  };
  */
}

.bar-v {
  position: fixed;
  top:30px;
  left:240px;
  height:100%;
  z-index:100;
  width:6px;
  background-color:$white;
  border-left:1px solid $tabBorder;
  border-right:1px solid $tabBorder;
  background-image: image-url("bgnds/drag-v.png");
  @include background-size(2px 30px);
  background-repeat:no-repeat;
  background-position:2px 50%;
  cursor:ew-resize;
  &:hover {
    background-color:$white;
  };
  &.bar-closed {
    left:40px;
    cursor:e-resize;
  }
  &.objnav {
    z-index: 1;  // Show object nav bar-v below title
  }
}

// TOP INNER NAV
.top-inner-nav {
  ul.internav {
    @include reset-list();
    @include clearfix();
    margin-left: 11px;
    li {
      position: relative;
      float: left;
      margin-bottom: -1px;
      &.inner-nav-button {
        text-align: center;
        padding: 1px 10px 0 10px;
        float: right;
        .message {
          color: $green;
        }
        .tiny-help-text {
          padding-top: 4px;
          font-size: 10px;
          line-height: 13px;
          display: inline-block;
          margin: 0;
        }
      }
      &.finished {
        background: $rqAccepted;
      }
      &.started {
        background: $rqStarted;
      }
      &.overdue {
        background: $red;
        a {
          color: $white;
          i {
            @include opacity(1);
          }
        }
      }
    }
    a {
      padding: 0 9px;
      display: block;
      line-height: 29px;
      font-size: 13px;
      color: $tabTitle;
      border: 1px solid transparent;
      &:hover {
        background: $tabHoverBgnd;
        color: $white;
        text-decoration: none;
      }
    }
    i {
      margin-top: 6px;
      margin-right: 3px;
      @include opacity(0.55);
    }
    li.active {
      a {
        color: $subTitle;
        background-color: $white;
        border: 1px solid $tabBorder;
        border-bottom-color: transparent;
        i {
          @include opacity(8);
        }
      }
    }
    li:hover {
      a {
        background-color: $tabHoverBgnd;
        color: $white;
        i {
          @include opacity(1);
        }
      }
      &.overdue {
        a {
          background-color: $red;
          color: $white;
        }
      }
    }
    &.business {
      li:hover {
        a {
          color: $white;
          background-color:$business;
        }
      }
    }
    &.governance {
      li:hover {
        a {
          background-color:$governance;
        }
      }
    }
    &.risk {
      li:hover {
        a {
          background-color:$risk;
        }
      }
    }
    &.program {
      li:hover {
        a {
          color: $white;
          background-color:$programs;
        }
      }
    }
    &.objectives {
      li:hover {
        a {
          background-color:$objectives;
        }
      }
    }
    &.controls {
      li:hover {
        a {
          color: $white;
          background-color:$controls;
        }
      }
    }
    &.entities {
      li:hover {
        a {
          color: $white;
          background-color:$entities;
        }
      }
    }
    &.workflow {
      li:hover {
        a {
          color: $white;
          background-color:$programs;
        }
      }
    }
  }
}
/* ... */

